text overflow temp fix

--- a/styles/random-album/album.css
+++ b/styles/random-album/album.css
@@ -66,6 +66,10 @@
 
 .album-title{
   font-size: 30px;
+  width:100%;
+  white-space: nowrap;  
+  overflow: hidden; 
+  text-overflow: ellipsis;  
 }
 
 .album-artist{
